--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<p>Finalmente ce l'hai fatta e non sai nemmeno come? <br>Non ci pensare, vieni da Ken e porta pure il professore</p>
 					</section>				
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/lodo.jpg" alt="Ragazzi in festa"></a>
+						<a href="#" class="image full"><img src="images/Lodo.jpg" alt="Ragazzi in festa"></a>
 						<header>
 							<h2>Fare balotta </h2>
 						</header>
