--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/corona_alloro.jpg" alt="corona alloro"></a>
+						<a href="#" class="image full"><img src="images/Corona_alloro.jpg" alt="corona alloro"></a>
 						<header>
 							<h2>Festeggiare la tua laurea</h2>
 						</header>
