--- a/Cocktails.html
+++ b/Cocktails.html
@@ -59,7 +59,7 @@
 						<h2>Cocktails</h2>
 						<span class="byline"></span>
 					</header>
-					<p> Non preoccuparti delle tue finanze, anche un poveraccio come te può permettersi un cocktail al Ken SpritzBar; da noi puoi bere uno Spritz grande a soli <strong>3€</strong>. 
+					<p> Non preoccuparti delle tue finanze, qualsiasi poveraccio può permettersi un cocktail al Ken SpritzBar; da noi puoi bere uno Spritz grande a soli <strong>3€</strong>. 
 					Ad ogni cocktail puoi accompagnare degli ottimi stuzzichini in formula buffet: noi ti diamo il piatto, tu prendi quello che vuoi!</p>	
 
 <center>
