--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<header>
 							<h2>Festeggiare la tua laurea</h2>
 						</header>
-						<p>Finalmente ce l'hai fatta e non sai nemmeno come? <br>Non ci pensare, vieni da Ken e porta pure il professore</p>
+						<p>Finalmente ce l'hai fatta e non sai nemmeno come? Non ci pensare, vieni da Ken e porta pure il professore</p>
 					</section>				
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/Lodo.jpg" alt="Ragazzi in festa"></a>
