--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
 					<h2>Da Ken puoi:</h2></header>
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/bottiglie.jpg" alt="immagine bottiglie"></a>
+						<a href="images/caipiroska.jpg" class="image full"><img src="images/bottiglie.jpg" alt="immagine bottiglie">
+						</a>
 						<header>
 							<h2>Bere cocktail a prezzi stracciati</h2>
 						</header>
 						<p>Lo SpritzBar ha una vasta scelta di cocktail tra i quali troverai sicuramente il tuo preferito. Ogni drink ti verrà preparato con cura da <a href="https://www.instagram.com/p/B6IzDcPI7tW/">Luciano</a>, il dragone degli spritz</p>
 					</section>			
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/crostini.jpg" alt="immagine di crostini"></a>
+						<a href="images/aperitivo.jpg" class="image full"><img src="images/crostini.jpg" alt="immagine crostini"></a>
 						<header>
 							<h2>Gustare stuzzichini</h2>
 						</header>
@@ -96,14 +97,14 @@
 
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/Corona_alloro.jpg" alt="corona alloro"></a>
+						<a href="images/laurea.jpg" class="image full"><img src="images/corona_alloro.jpg" alt="immagine corona"></a>
 						<header>
 							<h2>Festeggiare la tua laurea</h2>
 						</header>
 						<p>Finalmente ce l'hai fatta e non sai nemmeno come? Non ci pensare, vieni da Ken e porta pure il professore</p>
 					</section>				
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/Lodo.jpg" alt="Ragazzi in festa"></a>
+						<a href="images/sanremo.jpg" class="image full"><img src="images/Lodo.jpg" alt="Ragazzi in festa"></a>
 						<header>
 							<h2>Fare balotta </h2>
 						</header>
