--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 				<div class="row">
 					<section class="6u">
-						<a href="images/laurea.jpg" class="image full"><img src="images/corona_alloro.jpg" alt="immagine corona"></a>
+						<a href="images/laurea.jpg" class="image full"><img src="images/Corona_alloro.jpg" alt="immagine corona"></a>
 						<header>
 							<h2>Festeggiare la tua laurea</h2>
 						</header>
