--- a/Cocktails.html
+++ b/Cocktails.html
@@ -45,7 +45,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="About us.html">About Ken</a></li>
 						<li><a href="Cocktails.html">Cocktails</a></li>
-						<li class="active"><a href="Contacts.html">Contacts</a></li>
+						<li><a href="Orari.html">Orari</a></li>
+						<li class="active"><a href="Contacts.html">Contatti</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -69,7 +70,7 @@
 						<h2>Cocktails</h2>
 						<span class="byline"></span>
 					</header>
-					<p> Non preoccuparti delle tue finanze, qualsiasi poveraccio può permettersi un cocktail al Ken SpritzBar; da noi puoi bere uno Spritz grande a soli <strong>3€</strong>. 
+					<p> Non preoccuparti per le tue finanze, qualsiasi poveraccio può permettersi un cocktail al Ken SpritzBar; da noi puoi bere uno Spritz grande a soli <strong>3€</strong>. 
 					Ad ogni cocktail puoi accompagnare degli ottimi stuzzichini in formula buffet: noi ti diamo il piatto, tu prendi quello che vuoi!</p>	
 
 <center>
