--- a/Orari.html
+++ b/Orari.html
@@ -45,7 +45,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="About us.html">About Ken</a></li>
 						<li><a href="Cocktails.html">Cocktails</a></li>
-						<li class="active"><a href="Contacts.html">Contacts</a></li>
+						<li><a href="Orari.html">Orari</a></li>
+						<li class="active"><a href="Contacts.html">Contatti</a></li>
 					</ul>
 				</nav>
 			</div>
