--- a/Orari.html
+++ b/Orari.html
@@ -55,7 +55,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<img id="facciaken" alt="Faccia di KEN" src="images/ken.jpg" width="110">
-					<h1><a href="#">Ken SpritzBar</a></h1>
+					<h1><a href="images/Yes-we-Ken.jpg">Ken SpritzBar</a></h1>
 					<span class="tag"></span>
 				</div>
 			</div>
