--- a/About us.html
+++ b/About us.html
@@ -6,7 +6,7 @@
 -->
 <html lang="it">
 	<head>
-		<title>About us</title>
+		<title>About Ken</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -56,7 +56,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<img id="facciaken"  alt="Faccia di KEN" src="images/ken.jpg" width="110">
-					<h1><a href="#">Ken SpritzBar</a></h1>
+					<h1><a href="images/Yes-we-Ken.jpg">Ken SpritzBar</a></h1>
 					<span class="tag"></span>
 				</div>
 			</div>
