--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<img id="facciaken"  alt="Faccia di KEN" src="images/ken.jpg" width="140">
-					<h1><a href="#">Ken SpritzBar</a></h1>
+					<h1><a href="images/Yes-we-Ken.jpg">Ken SpritzBar</a></h1>
 					<span class="tag">Una leggenda a Bologna</span>
 				</div>
 			</div>
