--- a/About us.html
+++ b/About us.html
@@ -122,7 +122,7 @@
 
 			<div id="copyright">
 				<div class="container">
-				 All rights reserved. | Design: <a href="http://templated.co">TEMPLATED</a> | Images: <a href="https://pixabay.com/it/">Pixabay</a> | Project made by <a href="">Alessia Rinaudo </a> | <a href="">Documentazione</a>
+				 All rights reserved. | Design: <a href="http://templated.co">TEMPLATED</a> | Images: <a href="https://pixabay.com/it/">Pixabay</a> | Project made by Alessia Rinaudo | <a href="Project Management Plan.html">Documentazione</a>
 			</div>| 
 		</div>
 
