--- a/Project Management Plan.html
+++ b/Project Management Plan.html
@@ -199,7 +199,7 @@
 
 			<div id="copyright">
 				<div class="container">
-				 All rights reserved. | Design: <a href="http://templated.co">TEMPLATED</a> | Images: <a href="https://pixabay.com/it/">Pixabay</a> | Project made by >Alessia Rinaudo | <a href="Project Management Plan.html">Documentazione</a>
+				 All rights reserved. | Design: <a href="http://templated.co">TEMPLATED</a> | Images: <a href="https://pixabay.com/it/">Pixabay</a> | Project made by Alessia Rinaudo | <a href="Project Management Plan.html">Documentazione</a>
 			</div>| 
 		</div>
 
