--- a/Project Management Plan.html
+++ b/Project Management Plan.html
@@ -159,7 +159,7 @@
 	<h3>4. Promozione</h3>
 	<p>Intendo promuovere il sito prevalentemente online, tramite social (Instagram e Facebook) e tramite passaparola su gruppi WhatsApp.</p>
 	<h3>5. Valutazione dei risultati</h3>
-	<p>Tramite l’utilizzo di Google Analytics ho potuto constatare che l’obbiettivo di ottenere 50 visite da parte di utenti unici è stato raggiunto: ad oggi il sito è stato visitato da più di 200 utenti. Il target principale è stato raggiunto poiché gli la maggior parte degli utenti che hanno visitato il sito rientra nella fascia d’età 18-29 e studia a Bologna. Inoltre, molti hanno riferito che il sito gli ha fatto venir proprio voglia di visitare il locale: non ci resta che aspettare che tutti vengano a bere da Ken!</p>
+	<p>Tramite l’utilizzo di Google Analytics ho potuto constatare che l’obbiettivo di ottenere 50 visite da parte di utenti unici è stato raggiunto: ad oggi il sito è stato visitato da più di 200 utenti. Il target principale è stato raggiunto poiché la maggior parte degli utenti che hanno visitato il sito rientra nella fascia d’età 18-29 e studia a Bologna. Inoltre, molti hanno riferito che il sito gli ha fatto venir proprio voglia di visitare il locale: non ci resta che aspettare che tutti vengano a bere da Ken!</p>
 </section>
 				</section>
 			</div>
